# GeoXClean

./: .gitignore  AUTOSUGGEST_BUG_FIX.md  AUTOSUGGEST_FIXES_APPLIED.md  BUILD_INSTALLER.md  COORDINATE_FIX_SUMMARY.md  CRITICAL_FIXES_CHECKLIST.md  CTO_TECHNICAL_AUDIT_REPORT.md  ECONOMIC_RULE_ARCHITECTURE.md  FAULT_INTEGRATION_FIX.md  FAULT_USAGE_GUIDE.md  GPU_TIMEOUT_FIX_v2.md  LAYOUT_LEGEND_SYNC_FIX.md  LAYOUT_LEGEND_SYNC_FIX_v2.md  LOOPSTRUCTURAL_UI_MODERNIZATION.md  MANIFEST.in  MENU_EXTRACTION_COMPLETE.md  MENU_EXTRACTION_SUMMARY.md  PANEL_CLEANUP_IMPLEMENTATION.md  README.md  REFACTORING_PATTERN.md  REFACTORING_STATUS.md  RESIZE_DEBUG_GUIDE.md  RESOURCE_CLASSIFICATION_DEBUG_REPORT.md  RESOURCE_CLASSIFICATION_VIZ_FIX.md  SECURITY_FIXES.md  SIMPLE_KRIGING_DEBUG_GUIDE.md  SK_DEBUG_QUICK_REF.txt  THEME_FIX_SUMMARY.md  UI_LAYOUT_SPACING_FIXES.md  UI_PANEL_LAYOUT_FIXES.md  backup_sgsim.py  build_installer.bat  fix_all_themes.py  fix_refresh_theme.py  fix_sgsim_indent.py  fix_theme_errors.py  fix_themes_v2.py  loopstructural_panel_restored.py  panel_states.json  pyproject.toml  (+12 more)
.claude/: settings.json  settings.local.json
.cursor/commands/: audit-engine.md  debug-geox.md  implement-engine.md
.cursor/rules/: geox-project-rules.mdc
.github/workflows/: ci_packaging.yml  release.yml
audit_logs/: audit_2026-01-23.jsonl  audit_2026-01-29.jsonl  audit_2026-02-06.jsonl  audit_2026-02-11.jsonl  audit_2026-02-13.jsonl  audit_2026-02-14.jsonl  audit_2026-02-15.jsonl  audit_2026-02-16.jsonl  audit_2026-02-17.jsonl  audit_2026-02-18.jsonl
block_model_viewer/: __init__.py  __main__.py  config.py  main.py
block_model_viewer/assets/: __init__.py
block_model_viewer/controllers/: __init__.py  app_controller.py  app_state.py  controller_signals.py  data_controller.py  geostats_controller.py  grid_builder.py  insar_controller.py  job_registry.py  job_worker.py  mining_controller.py  scan_controller.py  survey_deformation_controller.py  vis_controller.py
block_model_viewer/core/: __init__.py  audit_manager.py  crash_handler.py  data_provenance.py  data_registry.py  data_registry_simple.py  economic_rule.py  errors.py  process_history_tracker.py  scan_registry.py  state_manager.py  thread_safe_cache.py  worker.py
block_model_viewer/drillholes/: __init__.py  audit_export.py  (+27 more)
docs/: KRIGING_EXPORT_GUIDELINES.md  KRIGING_PROFESSIONAL_ENHANCEMENTS.md  KRIGING_PROFESSIONAL_USAGE_GUIDE.md  KRIGING_RESULTS_ARCHITECTURE.md  PHASE_2_COMPLETION_SUMMARY.md  PRD.md  architecture.md  block_model_authoritative.md  classification_philosophy.md  data_registry_rules.md  design_drillholes.md  design_geostats.md  design_rendering.md  design_scans.md  determinism_rules.md  domain_optional.md  drillholes_immutable.md  engine_ui_separation.md  execution_flow.md  geostatistical_standards.md  geox_invariants.md  jorc_samrec_constraints.md  no_ml_unless_explicit.md
geox/: __init__.py
installer/: BlockModelViewer.iss
tests/: __init__.py  conftest.py  requirements-test.txt  test_property_panel_signal_fix.py
(+615 files in other folders)
